--- a/src/container/docker-compose.yml
+++ b/src/container/docker-compose.yml
@@ -4,9 +4,8 @@ services:
     build: .
     ports:
       - "6080:80"
-      - "42069:42074/udp"
-      - "42069:42074/tcp"
-      - "5900:5900"
+      - "42069-42074:42069-42074/udp"
+      - "42069-42074:42069-42074/tcp"
       - "8000:8000"
     volumes:
       - type: bind
