--- a/src/container/requirements.txt
+++ b/src/container/requirements.txt
@@ -11,6 +11,8 @@ itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
 mergedeep==1.3.4
+psutil==5.8.0
+pydantic==1.8.2
 requests==2.26.0
 six==1.16.0
 termcolor==1.1.0
@@ -21,4 +23,3 @@ websocket-client==1.2.1
 Werkzeug==2.0.1
 WTForms==2.3.3
 zipp==3.5.0
-pydantic==1.8.2
